# neuralnet

./: README.md  Workshop1.ipynb  hello.py  pyproject.toml  requirements.txt
