[project]
name = "neuralnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ipykernel>=6.29.5",
  "jupyter>=1.1.1",
  "jupyterlab-rise>=0.43.1",
  "matplotlib>=3.10.0",
  "numpy>=2.2.2",
  "scikit-learn>=1.6.1",
]

[project.optional-dependencies]
cpu = ["torch>=2.6.0", "torchvision>=0.21.0"]
cu124 = ["torch>=2.6.0", "torchvision>=0.21.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu124" }]]


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
